Update the DirectoryProcessor to work with subdirectories